--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Define the default schema
 spring.jpa.properties.hibernate.default_schema=schema
+
+# Heroku Deployment Port
+server.port=${PORT:8080}
