--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
+spring.jpa.generate-ddl=true
+
 # Automatically update the database
 spring.jpa.hibernate.ddl-auto=update
 
 # The database connection URL
-spring.datasource.url=jdbc:mysql://localhost:3306/workout_db?useSSL=false
+spring.datasource.url=${JDBC_DATABASE_URL}
 
 # Username
-spring.datasource.username={username}
+spring.datasource.username={$JDBC_DATABASE_USERNAME}
 
 # Password
-spring.datasource.password={password}
+spring.datasource.password={$JDBC_DATABASE_PASSWORD}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
