--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-spring.jpa.generate-ddl=true
-
 # Automatically update the database
 spring.jpa.hibernate.ddl-auto=update
 
 # The database connection URL
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/workout_db?useSSL=false
 
 # Username
-spring.datasource.username={$JDBC_DATABASE_USERNAME}
+spring.datasource.username=root
 
 # Password
-spring.datasource.password={$JDBC_DATABASE_PASSWORD}
+spring.datasource.password=Mysql4me!
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -21,5 +19,10 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # Define the default schema
 spring.jpa.properties.hibernate.default_schema=schema
 
+# Show SQL
+spring.jpa.show-sql=true
+
 # Heroku Deployment Port
 server.port=${PORT:8080}
+
+spring.jpa.generate-ddl=true
