--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Automatically update the database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
-spring.datasource.url=${JAWSDB_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/workout_db?useSSL=false
 
 # Username
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.username={username}
 
 # Password
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.password={password}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
