--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,11 +1,11 @@
 # The database connection URL 
-spring.datasource.url=JDBC_DATABASE_URL
+spring.datasource.url
 
 # Username
-spring.datasource.username=JDBC_DATABASE_USERNAME
+spring.datasource.username
 
 # Password
-spring.datasource.password=JDBC_DATABASE_PASSWORD
+spring.datasource.password
 
 # Automatically update/create the database
 spring.jpa.hibernate.ddl-auto=create
