--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.jpa.hibernate.ddl-auto=update
 
 # The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/workout_db?useSSL=false
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 
 # Username
-spring.datasource.username={username}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 
 # Password
-spring.datasource.password={password}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
