--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,27 +2,21 @@
 spring.jpa.hibernate.ddl-auto=create
 
 # The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
-spring.datasource.url=jdbc:${SPRING_DATASOURCE_URL}
+spring.datasource.url=${JDBC_DATABASE_URL}
 
 # Username
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
 
 # Password
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Define the naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Define the default schema
-spring.jpa.properties.hibernate.default_schema=schema
-
 # Show SQL
 spring.jpa.show-sql=true
 
-# Heroku Deployment Port
+# Deployment Port
 server.port=${PORT:8080}
 
 spring.jpa.generate-ddl=true
