--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=create
 
 # The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=mysql://o3l1tbjqzqdsrds2:kaumhgw4fcmfqbh9@ixqxr3ajmyapuwmi.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e0wddjroaoecn9zt
 
 # Username
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
