--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.jpa.hibernate.ddl-auto=create
 
 # The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
-spring.datasource.url=mysql://o3l1tbjqzqdsrds2:kaumhgw4fcmfqbh9@ixqxr3ajmyapuwmi.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e0wddjroaoecn9zt
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 
 # Username
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 
 # Password
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -16,7 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # Show SQL
 spring.jpa.show-sql=true
 
-# Deployment Port
+# Heroku Deployment Port
 server.port=${PORT:8080}
 
 spring.jpa.generate-ddl=true
