--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
 # Automatically update the database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
+# The database connection URL - jdbc:mysql://localhost:3306/workout_db?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/workout_db?useSSL=false
+
+# Username
+#spring.datasource.username={username}
+
+# Password
+#spring.datasource.password={password}
+
+# Define the database platform
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Show SQL
+#spring.jpa.show-sql=true
+
+# Heroku Deployment Port
+#server.port=${PORT:8080}
+
+#spring.jpa.generate-ddl=true
